# minicurso-cmake

./: .gitignore  README.md
Apresentacao/Exemplos/CompilacaoCondicional/: README.md  main.cpp
Apresentacao/Exemplos/CompilacaoSimples/: README.md  main.cpp
Apresentacao/Exemplos/TiposLinkagem/: README.md
Praticas/: README.md
Praticas/Pratica-01/: CMakeLists.txt  README.md
Praticas/Pratica-02/: CMakeLists.txt  README.md
Praticas/Pratica-03/: CMakeLists.txt  README.md
Praticas/Pratica-04/: CMakeLists.txt  README.md
Praticas/Pratica-05/: CMakeLists.txt  README.md
Praticas/Pratica-06/: CMakeLists.txt  README.md
Praticas/Pratica-07/: CMakeLists.txt  README.md
Praticas/Pratica-08/: CMakeLists.txt  README.md
Praticas/Pratica-09/: CMakeLists.txt  README.md
